prov/efa: move and rename rxr_ep_init_mr_desc()
This patch renamed function rxr_ep_init_mr_desc() to
rxr_tx_entry_try_fill_desc() and moved the function to
rxr_op_entry.c.

It added a function header comment to explain this
fuction's usage and behavior.

It moved the calling this function from rxr_msg_post_rtm()
to the initialization of medium packet to simplify
rxr_msg_post_rtm()

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -58,6 +58,7 @@ _efa_files = \
 	prov/efa/src/rxr/rxr_pkt_type_misc.c \
 	prov/efa/src/rxr/rxr_pkt_cmd.c \
 	prov/efa/src/rxr/rxr_read.c \
+	prov/efa/src/rxr/rxr_op_entry.c \
 	prov/efa/src/rxr/rxr_atomic.c
 
 _efa_headers = \
