--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -860,6 +860,7 @@
     <ClCompile Include="prov\efa\src\efa_prov_info.c" />
     <ClCompile Include="prov\efa\src\efa_fork_support.c" />
     <ClCompile Include="prov\efa\src\rxr\rxr_pkt_type_base.c" />
+    <ClCompile Include="prov\efa\src\rxr\rxr_op_entry.c" />
     <ClCompile Include="prov\efa\src\windows\efawin.c" />
     <ClCompile Include="prov\efa\src\rxr\rxr_atomic.c" />
     <ClCompile Include="prov\efa\src\rxr\rxr_attr.c" />
