fabtest/sock_test: Remove binary file
Binary file was picked up by an unrelated patch and merged.
Undo.

Add to .gitignore.

Signed-off-by: Sean Hefty <sean.hefty@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ fabtests/ubertest/fabtest
 fabtests/ubertest/fi_ubertest
 
 fabtests/benchmarks/fi_*
+fabtests/component/sock_test
 fabtests/functional/fi_*
 fabtests/unit/fi_*
 fabtests/multinode/fi_*
