--- a/fabtests/fabtests.vcxproj.filters
+++ b/fabtests/fabtests.vcxproj.filters
@@ -43,11 +43,17 @@
     <Filter Include="Source Files\benchmarks">
       <UniqueIdentifier>{f1716194-5311-4a40-a1f3-d4e96c93639f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\multinode">
+      <UniqueIdentifier>{2faeae3a-fc2b-4642-9c33-68f5266ca3b5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\multinode\include">
+      <UniqueIdentifier>{160442e0-a8e7-4bed-b61e-d884d32cc76d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\osd\arpa">
+      <UniqueIdentifier>{51950ad3-b2bf-429c-8552-df4962b4164b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="common\jsmn.c">
-      <Filter>Source Files\common</Filter>
-    </ClCompile>
     <ClCompile Include="common\hmem.c">
       <Filter>Source Files\common</Filter>
     </ClCompile>
@@ -103,9 +109,6 @@
       <Filter>Source Files\functional</Filter>
     </ClCompile>
     <ClCompile Include="functional\scalable_ep.c">
-      <Filter>Source Files\functional</Filter>
-    </ClCompile>
-    <ClCompile Include="functional\inj_complete.c">
       <Filter>Source Files\functional</Filter>
     </ClCompile>
     <ClCompile Include="ubertest\connect.c">
@@ -195,6 +198,57 @@
     <ClCompile Include="unit\cntr_test.c">
       <Filter>Source Files\unit</Filter>
     </ClCompile>
+    <ClCompile Include="functional\av_xfer.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\cm_data.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\multi_mr.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\rdm_multi_client.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\rdm_shared_av.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\recv_cancel.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\shared_ctx.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\unexpected_msg.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\bw.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\msg_inject.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\multi_recv.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\rdm_atomic.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
+    <ClCompile Include="multinode\src\core.c">
+      <Filter>Source Files\multinode</Filter>
+    </ClCompile>
+    <ClCompile Include="multinode\src\core_coll.c">
+      <Filter>Source Files\multinode</Filter>
+    </ClCompile>
+    <ClCompile Include="multinode\src\harness.c">
+      <Filter>Source Files\multinode</Filter>
+    </ClCompile>
+    <ClCompile Include="multinode\src\pattern.c">
+      <Filter>Source Files\multinode</Filter>
+    </ClCompile>
+    <ClCompile Include="functional\multi_ep.c">
+      <Filter>Source Files\functional</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\jsmn.h">
@@ -227,9 +281,6 @@
     <ClInclude Include="include\windows\unistd.h">
       <Filter>Header Files\osd</Filter>
     </ClInclude>
-    <ClInclude Include="include\windows\sched.h">
-      <Filter>Header Files\osd</Filter>
-    </ClInclude>
     <ClInclude Include="include\windows\sys\socket.h">
       <Filter>Header Files\osd\sys</Filter>
     </ClInclude>
@@ -253,6 +304,21 @@
     </ClInclude>
     <ClInclude Include="include\ft_osd.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\windows\sched.h">
+      <Filter>Header Files\osd</Filter>
+    </ClInclude>
+    <ClInclude Include="multinode\include\coll_test.h">
+      <Filter>Source Files\multinode\include</Filter>
+    </ClInclude>
+    <ClInclude Include="multinode\include\core.h">
+      <Filter>Source Files\multinode\include</Filter>
+    </ClInclude>
+    <ClInclude Include="multinode\include\pattern.h">
+      <Filter>Source Files\multinode\include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\windows\arpa\inet.h">
+      <Filter>Header Files\osd\arpa</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
