--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 #
-# Copyright 2018,2020 Cray Inc. All rights reserved.
+# Copyright 2018,2020-2022 Cray Inc. All rights reserved.
 
 if HAVE_CXI
 
@@ -85,6 +85,13 @@ prov_cxi_test_distributed_test_zbcoll_SOURCES = \
 	prov/cxi/test/distributed/test_zbcoll.c
 prov_cxi_test_distributed_test_zbcoll_LDFLAGS = -static
 prov_cxi_test_distributed_test_zbcoll_LDADD = prov/cxi/lib/libfrmwk.la \
+	$(linkback) $(PTHREAD_LIBS)
+
+bin_PROGRAMS += prov/cxi/test/distributed/test_coll
+prov_cxi_test_distributed_test_coll_SOURCES = \
+	prov/cxi/test/distributed/test_coll.c
+prov_cxi_test_distributed_test_coll_LDFLAGS = -static
+prov_cxi_test_distributed_test_coll_LDADD = prov/cxi/lib/libfrmwk.la \
 	$(linkback) $(PTHREAD_LIBS)
 
 endif HAVE_PMI
