prov/psm3:  Add missing files to make dist tarball
Adds new variable which allows providers to add to EXTRA_DIST if needed.
Follows man page example.

Fixes: #7735
Signed-off-by: Adam Goldman <adam.goldman@intel.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -415,6 +415,7 @@ rpm: dist
 
 prov_install_man_pages=
 prov_dist_man_pages=
+prov_extra_dist=
 EXTRA_DIST=
 
 include prov/sockets/Makefile.include
@@ -447,4 +448,5 @@ EXTRA_DIST += \
         NEWS.md \
         libfabric.spec.in \
         config/distscript.pl \
-        $(real_man_pages) $(prov_dist_man_pages) $(dummy_man_pages)
+        $(real_man_pages) $(prov_dist_man_pages) $(dummy_man_pages) \
+        $(prov_extra_dist)
