contrib/intel/jenkins: Add OneCCL GPU tests to CI - Add OneCCL examples and functional test suites in GPU mode to libfabric CI. - Tests run with tcp provider only. There is an issue with OFI MPI init hook while running tests with psm3 provider. This needs to be investigated separately. - One of the functional tests (allreduce_test) is not added as it is resulting in a segmentation fault. OneCCL team needs to be consulted for this issue. - Takes 1 min 42 secs to complete.
Signed-off-by: Juee Himalbhai Desai <juee.himalbhai.desai@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -383,6 +383,23 @@ pipeline {
                         }
                     }
                 }
+                stage('oneCCL-GPU') {
+                    agent {node {label 'ze'}}
+                    options { skipDefaultCheckout() }
+                    steps {
+                        withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH'])
+                        {
+                          sh """
+                            env
+                            (
+                                cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
+                                python3.7 runtests.py --prov=tcp --test=onecclgpu
+                                echo "oneCCL-GPU completed."
+                            )
+                          """
+                        }
+                    }
+                }
                 stage('ze-shm') {
                     agent {node {label 'ze'}}
                     options { skipDefaultCheckout() }
