fabtests: Add regression test for shm sighandler restoration (PR#7605)
The test checks if the default signal handler is properly chained in the
handler installed by the shm provider.

Signed-off-by: Jianxin Xiong <jianxin.xiong@intel.com>

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -65,7 +65,8 @@ bin_PROGRAMS = \
 	ubertest/fi_ubertest	\
 	multinode/fi_multinode	\
 	multinode/fi_multinode_coll \
-	component/sock_test
+	component/sock_test \
+	regression/shm_sighandler_test
 
 dist_bin_SCRIPTS = \
 	scripts/runfabtests.sh \
@@ -440,6 +441,14 @@ component_sock_test_SOURCES = \
 component_sock_test_LDADD = libfabtests.la
 
 component_sock_test_CFLAGS = \
+	$(AM_CFLAGS)
+
+regression_shm_sighandler_test_SOURCES = \
+	regression/shm_sighandler_test.c
+
+regression_shm_sighandler_test_LDADD = libfabtests.la
+
+regression_shm_sighandler_test_CFLAGS = \
 	$(AM_CFLAGS)
 
 real_man_pages = \
