fabtests: Add sighandler_test to runfabtests
Signed-off-by: William Zhang <wilzhang@amazon.com>

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -141,6 +141,7 @@ nobase_dist_config_DATA = \
 	pytest/default/test_shared_ctx.py \
 	pytest/default/test_ubertest.py \
 	pytest/default/test_unexpected_msg.py \
+	pytest/default/test_sighandler.py \
 	pytest/efa/conftest.py \
 	pytest/efa/efa_common.py \
 	pytest/efa/test_from_default.py \
