--- a/prov/opx/Makefile.include
+++ b/prov/opx/Makefile.include
@@ -53,6 +53,7 @@ opx_files =									\
 		prov/opx/src/fi_opx_msg.c					\
 		prov/opx/src/fi_opx_rma.c					\
 		prov/opx/src/fi_opx_hfi1.c					\
+		prov/opx/src/fi_opx_hfi1_sdma.c					\
 		prov/opx/src/fi_opx_reliability.c				\
 		prov/opx/src/fi_opx_tagged.c					\
 		prov/opx/src/fi_opx_sep.c					\
