fabtests/runfabtests.cmd: Rewrite to be more like runfabtests.sh
Brings a significant amount of the functionality of runfabtests.sh to
runfabtests.cmd in order to run tests on the verbs provider on windows
in a similar fashion to linux.

Modify appveyor configuration to run new version of runfabtests.cmd.

On-behalf-of: @cmru-ps <dshinaberry@mru.medical.canon>
Signed-off-by: Derek Shinaberry <dshinaberry@mru.medical.canon>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -53,10 +53,50 @@ before_test:
   - cd fabtests
   - msbuild fabtests.sln
 
-test_script:
-  - set PATH=%CD%\x64\%CONFIGURATION%;%PATH%
-  - set FI_PROVIDER=sockets
-  - scripts\runfabtests.cmd
+for:
+-
+  matrix:
+    only:
+      - image: Visual Studio 2017
+        configuration: Debug-v140
+      - image: Visual Studio 2017
+        configuration: Release-v140
+
+  test_script:
+    - scripts\runfabtests.cmd -v -v -v -p %CD%\x64\%CONFIGURATION% -t unit sockets
+
+-
+  matrix:
+    only:
+      - image: Visual Studio 2017
+        configuration: Debug-v141
+      - image: Visual Studio 2017
+        configuration: Release-v141
+
+  test_script:
+    - scripts\runfabtests.cmd -v -v -v -p %CD%\x64\%CONFIGURATION% -t functional sockets
+
+-
+  matrix:
+    only:
+      - image: Visual Studio 2019
+        configuration: Debug-v141
+      - image: Visual Studio 2019
+        configuration: Release-v141
+
+  test_script:
+    - scripts\runfabtests.cmd -v -v -v -p %CD%\x64\%CONFIGURATION% -C "-I 10" -L "-I 10" -t standard sockets
+
+-
+  matrix:
+    only:
+      - image: Visual Studio 2019
+        configuration: Debug-v142
+      - image: Visual Studio 2019
+        configuration: Release-v142
+
+  test_script:
+    - scripts\runfabtests.cmd -v -v -v -p %CD%\x64\%CONFIGURATION% -C "-I 10" -L "-I 10" -t multinode sockets
 
 skip_commits:
   files:
