prov/psm3 Add missing references to synapseai.
Signed-off-by: Michael Heinz <michael.heinz@intel.com>

--- a/prov/psm3/Makefile.am
+++ b/prov/psm3/Makefile.am
@@ -46,6 +46,7 @@ common_srcs = \
 	shared/hmem_cuda_gdrcopy.c \
 	shared/hmem_ze.c \
 	shared/hmem_neuron.c \
+	shared/hmem_synapseai.c \
 	shared/common.c \
 	shared/enosys.c \
 	shared/rbtree.c \
