prov/shm: Add HMEM IPC Caching Mechanism.
Opening and closing the HMEM IPC handles are expensive operations. They
should not be performed on every data operation.

This patch adds a caching mechanism. On the very first IPC handle open
call, the address is cached and the mapped memory address is stored. In
subsequent calls the cache is queried and the mapped address is retrieved.

On open handle the hmem specific code can return the actual length and
base address, which is cached. It is often the case that a big chunk of
device memory is allocated and managed by the app. This method allows the
libfabric code to recognize the initial allocation and only register it
once. Any address within this allocation is a cache hit.

In a future patch the caching mechanism can be used with memory
registration APIs. This design allows for caching to be invisible to the
user, thereby making the API simpler to use.

This is the same caching mechanism used in UCX.

Signed-off-by: Amir Shehata <shehataa@ornl.gov>

--- a/Makefile.am
+++ b/Makefile.am
@@ -58,6 +58,8 @@ common_srcs =				\
 	src/indexer.c			\
 	src/mem.c			\
 	src/iov.c			\
+	src/pgtable.c		\
+	src/hmem_cache.c	\
 	src/shared/ofi_str.c		\
 	prov/util/src/util_atomic.c	\
 	prov/util/src/util_attr.c	\
@@ -186,6 +188,12 @@ src_libfabric_la_SOURCES =			\
 	include/uthash.h			\
 	include/ofi_prov.h			\
 	include/ofi_linkx.h			\
+	include/pgtable.h			\
+	include/hmem_cache.h		\
+	include/bitops.h			\
+	include/aarch64/bitops.h	\
+	include/ppc64/bitops.h		\
+	include/x86_64/bitops.h		\
 	include/rdma/providers/fi_log.h		\
 	include/rdma/providers/fi_prov.h	\
 	src/fabric.c				\
