prov/efa: Add unit test for pkt pool flags and page alignment
This unit test is introduced to validate the changes in
https://github.com/ofiwg/libfabric/pull/7558

It also include some refactors that moves common test code into
test/efa_unit_test_common.c

Signed-off-by: Shi Jin <sjina@amazon.com>

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -96,9 +96,12 @@ TESTS += prov/efa/test/efa_unit_test
 nodist_prov_efa_test_efa_unit_test_SOURCES = \
 	prov/efa/test/efa_unit_tests.h \
 	prov/efa/test/efa_unit_tests.c \
-	prov/efa/test/rdma_core_mocks.c
+	prov/efa/test/rdma_core_mocks.c \
+	prov/efa/test/efa_unit_test_common.c \
+	prov/efa/test/efa_unit_test_ep.c
 
-efa_CPPFLAGS += -I$(top_srcdir)/prov/efa/test $(cmocka_CPPFLAGS)
+_efa_files += prov/efa/test/efa_unit_test_common.c
+efa_CPPFLAGS += -I$(top_srcdir)/include -I$(top_srcdir)/prov/efa/test $(cmocka_CPPFLAGS)
 
 
 prov_efa_test_efa_unit_test_CPPFLAGS = $(efa_CPPFLAGS)
