--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -97,6 +97,7 @@ nodist_prov_efa_test_efa_unit_test_SOURCES = \
 	prov/efa/test/efa_unit_tests.h \
 	prov/efa/test/efa_unit_tests.c \
 	prov/efa/test/rdma_core_mocks.c \
+	prov/efa/test/efa_unit_test_mocks.c \
 	prov/efa/test/efa_unit_test_common.c \
 	prov/efa/test/efa_unit_test_ep.c
 
@@ -110,7 +111,11 @@ prov_efa_test_efa_unit_test_LDFLAGS = $(cmocka_rpath) $(efa_LDFLAGS) $(cmocka_LD
 					-Wl,--wrap=ibv_create_ah \
 					-Wl,--wrap=ibv_destroy_ah \
 					-Wl,--wrap=efadv_query_ah \
-					-Wl,--wrap=efadv_query_device
+					-Wl,--wrap=efadv_query_device \
+					-Wl,--wrap=rxr_pkt_handle_send_completion \
+					-Wl,--wrap=rxr_pkt_handle_recv_completion \
+					-Wl,--wrap=rxr_pkt_handle_send_error \
+					-Wl,--wrap=rxr_pkt_handle_recv_error
 prov_efa_test_efa_unit_test_LIBS = $(efa_LIBS) $(linkback)
 
 endif ENABLE_EFA_UNIT_TEST
