prov/tcp2: Evolution of tcp provider
This is a copy of the tcp provider with a new progresss engine
applied.  Creating a copy in order to make significant changes
without impacting the stability of the existing tcp provider and
protocol.

The intent is for this provider to replace the tcp provider
(quickly), but allow for separate development.

Signed-off-by: Sean Hefty <sean.hefty@intel.com>

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -721,6 +721,18 @@
     <ClCompile Include="prov\tcp\src\tcpx_eq.c" />
     <ClCompile Include="prov\tcp\src\tcpx_init.c" />
     <ClCompile Include="prov\tcp\src\tcpx_progress.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_attr.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_cm.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_srx.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_cq.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_domain.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_rma.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_msg.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_ep.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_fabric.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_eq.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_init.c" />
+    <ClCompile Include="prov\tcp2\src\tcp2_progress.c" />
     <ClCompile Include="prov\udp\src\udpx_attr.c" />
     <ClCompile Include="prov\udp\src\udpx_cq.c" />
     <ClCompile Include="prov\udp\src\udpx_domain.c" />
@@ -962,6 +974,7 @@
     <ClInclude Include="prov\sockets\include\sock.h" />
     <ClInclude Include="prov\sockets\include\sock_util.h" />
     <ClInclude Include="prov\tcp\src\tcpx.h" />
+    <ClInclude Include="prov\tcp\src\tcp2.h" />
     <ClInclude Include="prov\udp\src\udpx.h" />
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)|$(Platform)'!='Debug-Efa-v142|x64' AND '$(Configuration)|$(Platform)'!='Release-Efa-v142|x64'">
